--- a/archives/toutiao-search/2024-04-21.md
+++ b/archives/toutiao-search/2024-04-21.md
@@ -1,75 +1,80 @@
 # 2024-04-21
 
-共 78 条
+共 83 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Apr 21 2024 04:00:39 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Apr 21 2024 05:00:58 GMT+0800 (China Standard Time) -->
+1. [林高远4-0横扫张本智和晋级决赛](https://so.toutiao.com/search?keyword=林高远4-0横扫张本智和晋级决赛)
 1. [洪秀柱率团抵达深圳](https://so.toutiao.com/search?keyword=洪秀柱率团抵达深圳)
-1. [重庆一女歌手寿宴表演时摔倒去世](https://so.toutiao.com/search?keyword=重庆一女歌手寿宴表演时摔倒去世)
 1. [春耕新事知多少](https://so.toutiao.com/search?keyword=春耕新事知多少)
 1. [以色列为何选择此时袭击伊朗](https://so.toutiao.com/search?keyword=以色列为何选择此时袭击伊朗)
 1. [直击广东多地强降雨救援现场](https://so.toutiao.com/search?keyword=直击广东多地强降雨救援现场)
-1. [林高远4-0横扫张本智和晋级决赛](https://so.toutiao.com/search?keyword=林高远4-0横扫张本智和晋级决赛)
-1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
+1. [重庆一女歌手寿宴表演时摔倒去世](https://so.toutiao.com/search?keyword=重庆一女歌手寿宴表演时摔倒去世)
+1. [66升油箱加出67升油 车主报警](https://so.toutiao.com/search?keyword=66升油箱加出67升油+车主报警)
 1. [10秒延时视频记录佛山暴雨过程](https://so.toutiao.com/search?keyword=10秒延时视频记录佛山暴雨过程)
 1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
-1. [准新娘自杀身亡 订婚彩礼仅返还18万](https://so.toutiao.com/search?keyword=准新娘自杀身亡+订婚彩礼仅返还18万)
+1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
 1. [黄子韬电音节被外国DJ拒绝同台](https://so.toutiao.com/search?keyword=黄子韬电音节被外国DJ拒绝同台)
-1. [美媒：伊朗袭击以暴露武器库实力](https://so.toutiao.com/search?keyword=美媒：伊朗袭击以暴露武器库实力)
 1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
+1. [美媒：伊朗袭击以暴露武器库实力](https://so.toutiao.com/search?keyword=美媒：伊朗袭击以暴露武器库实力)
 1. [西南医院一男子坠楼身亡？重庆辟谣](https://so.toutiao.com/search?keyword=西南医院一男子坠楼身亡？重庆辟谣)
 1. [9岁坠亡男孩与母亲最后对话曝光](https://so.toutiao.com/search?keyword=9岁坠亡男孩与母亲最后对话曝光)
 1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
-1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
-1. [王毅：联合国尽快接纳巴勒斯坦](https://so.toutiao.com/search?keyword=王毅：联合国尽快接纳巴勒斯坦)
+1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
 1. [重庆燃气集团新任一把手简历公布](https://so.toutiao.com/search?keyword=重庆燃气集团新任一把手简历公布)
 1. [西安地铁试车时发生事故](https://so.toutiao.com/search?keyword=西安地铁试车时发生事故)
 1. [女子100米栏吴艳妮创赛季最好成绩](https://so.toutiao.com/search?keyword=女子100米栏吴艳妮创赛季最好成绩)
-1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
-1. [66升油箱加出67升油 车主报警](https://so.toutiao.com/search?keyword=66升油箱加出67升油+车主报警)
-1. [原解放军总医院院长刘轩亭逝世](https://so.toutiao.com/search?keyword=原解放军总医院院长刘轩亭逝世)
-1. [9岁男孩坠亡前曾被罚抄词一万遍](https://so.toutiao.com/search?keyword=9岁男孩坠亡前曾被罚抄词一万遍)
-1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
-1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
-1. [湖南失踪15岁男孩遗体已找到](https://so.toutiao.com/search?keyword=湖南失踪15岁男孩遗体已找到)
-1. [美国为何阻碍巴勒斯坦“入联”](https://so.toutiao.com/search?keyword=美国为何阻碍巴勒斯坦“入联”)
-1. [百威回应麦道啤酒被检出呕吐毒素](https://so.toutiao.com/search?keyword=百威回应麦道啤酒被检出呕吐毒素)
-1. [中方两次回应301调查释放什么信号](https://so.toutiao.com/search?keyword=中方两次回应301调查释放什么信号)
+1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
 1. [重庆男子驾车连撞多人监控曝光](https://so.toutiao.com/search?keyword=重庆男子驾车连撞多人监控曝光)
-1. [王曼昱4-2张本美和 晋级女单决赛](https://so.toutiao.com/search?keyword=王曼昱4-2张本美和+晋级女单决赛)
-1. [曝以发射3枚导弹“有限打击”伊朗](https://so.toutiao.com/search?keyword=曝以发射3枚导弹“有限打击”伊朗)
-1. [多家电商平台已下架哈尔滨麦道啤酒](https://so.toutiao.com/search?keyword=多家电商平台已下架哈尔滨麦道啤酒)
+1. [王毅：联合国尽快接纳巴勒斯坦](https://so.toutiao.com/search?keyword=王毅：联合国尽快接纳巴勒斯坦)
+1. [湖南失踪15岁男孩遗体已找到](https://so.toutiao.com/search?keyword=湖南失踪15岁男孩遗体已找到)
+1. [9岁男孩坠亡前曾被罚抄词一万遍](https://so.toutiao.com/search?keyword=9岁男孩坠亡前曾被罚抄词一万遍)
+1. [百威回应麦道啤酒被检出呕吐毒素](https://so.toutiao.com/search?keyword=百威回应麦道啤酒被检出呕吐毒素)
+1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
+1. [美国为何阻碍巴勒斯坦“入联”](https://so.toutiao.com/search?keyword=美国为何阻碍巴勒斯坦“入联”)
 1. [广东韶关暴雨 墙被水流冲倒](https://so.toutiao.com/search?keyword=广东韶关暴雨+墙被水流冲倒)
+1. [准新娘自杀身亡 订婚彩礼仅返还18万](https://so.toutiao.com/search?keyword=准新娘自杀身亡+订婚彩礼仅返还18万)
 1. [媒体批菲方拿中国造的船当军演靶船](https://so.toutiao.com/search?keyword=媒体批菲方拿中国造的船当军演靶船)
-1. [3Q大战14年后周鸿祎马化腾握手](https://so.toutiao.com/search?keyword=3Q大战14年后周鸿祎马化腾握手)
+1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
+1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
+1. [日元贬值 海外游客涌入日本扫货](https://so.toutiao.com/search?keyword=日元贬值+海外游客涌入日本扫货)
+1. [多家电商平台已下架哈尔滨麦道啤酒](https://so.toutiao.com/search?keyword=多家电商平台已下架哈尔滨麦道啤酒)
+1. [媒体：调休或仍是目前最优解](https://so.toutiao.com/search?keyword=媒体：调休或仍是目前最优解)
 1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
+1. [男子去取钱未拆封的1万里少了300](https://so.toutiao.com/search?keyword=男子去取钱未拆封的1万里少了300)
+1. [俄外长：中国人伟大品质是“耐心”](https://so.toutiao.com/search?keyword=俄外长：中国人伟大品质是“耐心”)
+1. [周鸿祎：雷军说小米SU7不适合我](https://so.toutiao.com/search?keyword=周鸿祎：雷军说小米SU7不适合我)
+1. [广东防汛应急响应提升至Ⅱ级](https://so.toutiao.com/search?keyword=广东防汛应急响应提升至Ⅱ级)
+1. [马斯克确认推迟访问印度](https://so.toutiao.com/search?keyword=马斯克确认推迟访问印度)
+1. [南海部分海域进行军事训练禁止驶入](https://so.toutiao.com/search?keyword=南海部分海域进行军事训练禁止驶入)
+1. [加油站用软件作弊少加油被查封](https://so.toutiao.com/search?keyword=加油站用软件作弊少加油被查封)
+1. [孙颖莎进决赛将和王曼昱争冠](https://so.toutiao.com/search?keyword=孙颖莎进决赛将和王曼昱争冠)
 1. [父母离世后女子带着弟弟在婆家生活](https://so.toutiao.com/search?keyword=父母离世后女子带着弟弟在婆家生活)
 1. [中国互联网30年 哪些产品昙花一现](https://so.toutiao.com/search?keyword=中国互联网30年+哪些产品昙花一现)
+1. [3Q大战14年后周鸿祎马化腾握手](https://so.toutiao.com/search?keyword=3Q大战14年后周鸿祎马化腾握手)
+1. [多地启动燃气表水表检查](https://so.toutiao.com/search?keyword=多地启动燃气表水表检查)
+1. [曝以发射3枚导弹“有限打击”伊朗](https://so.toutiao.com/search?keyword=曝以发射3枚导弹“有限打击”伊朗)
+1. [原解放军总医院院长刘轩亭逝世](https://so.toutiao.com/search?keyword=原解放军总医院院长刘轩亭逝世)
+1. [中方两次回应301调查释放什么信号](https://so.toutiao.com/search?keyword=中方两次回应301调查释放什么信号)
+1. [王曼昱4-2张本美和 晋级女单决赛](https://so.toutiao.com/search?keyword=王曼昱4-2张本美和+晋级女单决赛)
 1. [广东清远寨岗镇突发洪水淹没街道](https://so.toutiao.com/search?keyword=广东清远寨岗镇突发洪水淹没街道)
-1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
 1. [女子花67万多买“法器”被骗报警](https://so.toutiao.com/search?keyword=女子花67万多买“法器”被骗报警)
 1. [哈尔滨啤酒客服回应检出呕吐毒素](https://so.toutiao.com/search?keyword=哈尔滨啤酒客服回应检出呕吐毒素)
 1. [官方再通报老人给城管下跪：深刻反省](https://so.toutiao.com/search?keyword=官方再通报老人给城管下跪：深刻反省)
-1. [马斯克确认推迟访问印度](https://so.toutiao.com/search?keyword=马斯克确认推迟访问印度)
 1. [成都通报“市民反映燃气费用暴涨”](https://so.toutiao.com/search?keyword=成都通报“市民反映燃气费用暴涨”)
 1. [南京一河中发现无名男童尸体](https://so.toutiao.com/search?keyword=南京一河中发现无名男童尸体)
-1. [媒体：调休或仍是目前最优解](https://so.toutiao.com/search?keyword=媒体：调休或仍是目前最优解)
 1. [哈马斯称愿遣散武装组织但有前提](https://so.toutiao.com/search?keyword=哈马斯称愿遣散武装组织但有前提)
 1. [雷军看不懂张朝阳送的物理书](https://so.toutiao.com/search?keyword=雷军看不懂张朝阳送的物理书)
 1. [马龙4-0横扫王楚钦 晋级男单决赛](https://so.toutiao.com/search?keyword=马龙4-0横扫王楚钦+晋级男单决赛)
 1. [中国奥运首枚金牌获得者重庆任教](https://so.toutiao.com/search?keyword=中国奥运首枚金牌获得者重庆任教)
 1. [巴方向投赞成票的安理会成员国致敬](https://so.toutiao.com/search?keyword=巴方向投赞成票的安理会成员国致敬)
-1. [俄外长：中国人伟大品质是“耐心”](https://so.toutiao.com/search?keyword=俄外长：中国人伟大品质是“耐心”)
 1. [广东肇庆暴雨后街边出现大量黄泥水](https://so.toutiao.com/search?keyword=广东肇庆暴雨后街边出现大量黄泥水)
-1. [男子去取钱未拆封的1万里少了300](https://so.toutiao.com/search?keyword=男子去取钱未拆封的1万里少了300)
 1. [泸定地震“泄洪英雄”甘宇婚礼现场](https://so.toutiao.com/search?keyword=泸定地震“泄洪英雄”甘宇婚礼现场)
 1. [入联遭美一票否决后巴方代表发声](https://so.toutiao.com/search?keyword=入联遭美一票否决后巴方代表发声)
 1. [外媒谈西方对中国的最大误解](https://so.toutiao.com/search?keyword=外媒谈西方对中国的最大误解)
-1. [周鸿祎：雷军说小米SU7不适合我](https://so.toutiao.com/search?keyword=周鸿祎：雷军说小米SU7不适合我)
 1. [闪电击中房顶 院子里瞬间全是火花](https://so.toutiao.com/search?keyword=闪电击中房顶+院子里瞬间全是火花)
 1. [阿联酋向汗尤尼斯提供援助](https://so.toutiao.com/search?keyword=阿联酋向汗尤尼斯提供援助)
 1. [广东省32个水文站超警戒水位](https://so.toutiao.com/search?keyword=广东省32个水文站超警戒水位)
-1. [广东防汛应急响应提升至Ⅱ级](https://so.toutiao.com/search?keyword=广东防汛应急响应提升至Ⅱ级)
 1. [媒体批评美国阻碍巴勒斯坦“入联”](https://so.toutiao.com/search?keyword=媒体批评美国阻碍巴勒斯坦“入联”)
 1. [医院通报男子坠亡：不存在医疗纠纷](https://so.toutiao.com/search?keyword=医院通报男子坠亡：不存在医疗纠纷)
 1. [男子的水墨画看似乱涂实则才华十足](https://so.toutiao.com/search?keyword=男子的水墨画看似乱涂实则才华十足)
