--- a/archives/toutiao-search/2024-04-21.md
+++ b/archives/toutiao-search/2024-04-21.md
@@ -1,58 +1,76 @@
 # 2024-04-21
 
-共 108 条
+共 125 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Apr 21 2024 08:28:31 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Apr 21 2024 09:44:49 GMT+0800 (China Standard Time) -->
 1. [吴艳妮：化妆比赛是因尊重现场观众](https://so.toutiao.com/search?keyword=吴艳妮：化妆比赛是因尊重现场观众)
-1. [洪秀柱：两岸统一就没心病了](https://so.toutiao.com/search?keyword=洪秀柱：两岸统一就没心病了)
+1. [除了调休就别无他法吗](https://so.toutiao.com/search?keyword=除了调休就别无他法吗)
 1. [春耕新事知多少](https://so.toutiao.com/search?keyword=春耕新事知多少)
 1. [伊朗为何不打算“立即报复”以色列](https://so.toutiao.com/search?keyword=伊朗为何不打算“立即报复”以色列)
 1. [美众院批准向乌供超600亿美元援助](https://so.toutiao.com/search?keyword=美众院批准向乌供超600亿美元援助)
+1. [洪秀柱：两岸统一就没心病了](https://so.toutiao.com/search?keyword=洪秀柱：两岸统一就没心病了)
+1. [为什么有那么多人想看周杰伦演唱会](https://so.toutiao.com/search?keyword=为什么有那么多人想看周杰伦演唱会)
 1. [直击广东多地强降雨救援现场](https://so.toutiao.com/search?keyword=直击广东多地强降雨救援现场)
-1. [阿巴斯称将重新考虑与美国的关系](https://so.toutiao.com/search?keyword=阿巴斯称将重新考虑与美国的关系)
 1. [中国女游客在印尼火山坠亡](https://so.toutiao.com/search?keyword=中国女游客在印尼火山坠亡)
-1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
 1. [男子去银行销户因2分钱起争执](https://so.toutiao.com/search?keyword=男子去银行销户因2分钱起争执)
+1. [黄子韬就不当言论道歉](https://so.toutiao.com/search?keyword=黄子韬就不当言论道歉)
 1. [西安地铁10号线试车追尾致1死2伤](https://so.toutiao.com/search?keyword=西安地铁10号线试车追尾致1死2伤)
-1. [黄子韬电音节被外国DJ拒绝同台](https://so.toutiao.com/search?keyword=黄子韬电音节被外国DJ拒绝同台)
-1. [重庆一女歌手寿宴表演时摔倒去世](https://so.toutiao.com/search?keyword=重庆一女歌手寿宴表演时摔倒去世)
-1. [西南医院一男子坠楼身亡？重庆辟谣](https://so.toutiao.com/search?keyword=西南医院一男子坠楼身亡？重庆辟谣)
+1. [阿巴斯称将重新考虑与美国的关系](https://so.toutiao.com/search?keyword=阿巴斯称将重新考虑与美国的关系)
+1. [清远暴雨致高铁车厢进水？官方辟谣](https://so.toutiao.com/search?keyword=清远暴雨致高铁车厢进水？官方辟谣)
+1. [特斯拉全系降价14000元](https://so.toutiao.com/search?keyword=特斯拉全系降价14000元)
+1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
+1. [珠江流域北江发生2024年第2号洪水](https://so.toutiao.com/search?keyword=珠江流域北江发生2024年第2号洪水)
+1. [林高远：享受世界大赛的决赛](https://so.toutiao.com/search?keyword=林高远：享受世界大赛的决赛)
 1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
-1. [外媒报多名中国游泳选手阳性有误导性](https://so.toutiao.com/search?keyword=外媒报多名中国游泳选手阳性有误导性)
-1. [重庆男子驾车连撞多人监控曝光](https://so.toutiao.com/search?keyword=重庆男子驾车连撞多人监控曝光)
 1. [10秒延时视频记录佛山暴雨过程](https://so.toutiao.com/search?keyword=10秒延时视频记录佛山暴雨过程)
-1. [洪秀柱率团抵达深圳](https://so.toutiao.com/search?keyword=洪秀柱率团抵达深圳)
-1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
-1. [日本股市牛市才刚刚开始的两大原因](https://so.toutiao.com/search?keyword=日本股市牛市才刚刚开始的两大原因)
+1. [网友质疑济南燃气费高于北京上海](https://so.toutiao.com/search?keyword=网友质疑济南燃气费高于北京上海)
+1. [“101计划”会影响高考生报考吗](https://so.toutiao.com/search?keyword=“101计划”会影响高考生报考吗)
+1. [重庆一女歌手寿宴表演时摔倒去世](https://so.toutiao.com/search?keyword=重庆一女歌手寿宴表演时摔倒去世)
+1. [黄子韬电音节被外国DJ拒绝同台](https://so.toutiao.com/search?keyword=黄子韬电音节被外国DJ拒绝同台)
+1. [日本海上自卫队两架直升机坠毁](https://so.toutiao.com/search?keyword=日本海上自卫队两架直升机坠毁)
 1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
+1. [洪秀柱率团抵达深圳](https://so.toutiao.com/search?keyword=洪秀柱率团抵达深圳)
+1. [宁静曝吻戏没经验把刘德华演尴尬了](https://so.toutiao.com/search?keyword=宁静曝吻戏没经验把刘德华演尴尬了)
 1. [媒体：美国“一票否决”暴露其双标](https://so.toutiao.com/search?keyword=媒体：美国“一票否决”暴露其双标)
-1. [B席绝杀 曼城1-0切尔西进决赛](https://so.toutiao.com/search?keyword=B席绝杀+曼城1-0切尔西进决赛)
 1. [媒体：调休或仍是目前最优解](https://so.toutiao.com/search?keyword=媒体：调休或仍是目前最优解)
+1. [重庆男子驾车连撞多人监控曝光](https://so.toutiao.com/search?keyword=重庆男子驾车连撞多人监控曝光)
+1. [周鸿祎喊话友商“要车”意在何处](https://so.toutiao.com/search?keyword=周鸿祎喊话友商“要车”意在何处)
+1. [海军军乐展演活动在青岛举行](https://so.toutiao.com/search?keyword=海军军乐展演活动在青岛举行)
+1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
+1. [广东韶关多地内涝 当地转移群众](https://so.toutiao.com/search?keyword=广东韶关多地内涝+当地转移群众)
+1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
+1. [周鸿祎：雷军说小米SU7不适合我](https://so.toutiao.com/search?keyword=周鸿祎：雷军说小米SU7不适合我)
+1. [“火车下铺之争”如何解](https://so.toutiao.com/search?keyword=“火车下铺之争”如何解)
+1. [媒体揭美国“战争经济学”](https://so.toutiao.com/search?keyword=媒体揭美国“战争经济学”)
+1. [直击广东防汛抗洪一线实况](https://so.toutiao.com/search?keyword=直击广东防汛抗洪一线实况)
+1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
+1. [准新娘自杀身亡 订婚彩礼仅返还18万](https://so.toutiao.com/search?keyword=准新娘自杀身亡+订婚彩礼仅返还18万)
+1. [680余名涉赌诈嫌犯被押解回国](https://so.toutiao.com/search?keyword=680余名涉赌诈嫌犯被押解回国)
+1. [广东韶关暴雨 墙被水流冲倒](https://so.toutiao.com/search?keyword=广东韶关暴雨+墙被水流冲倒)
+1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
+1. [日本股市牛市才刚刚开始的两大原因](https://so.toutiao.com/search?keyword=日本股市牛市才刚刚开始的两大原因)
+1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
+1. [张曼玉林丹搭档打羽毛球](https://so.toutiao.com/search?keyword=张曼玉林丹搭档打羽毛球)
+1. [外媒报多名中国游泳选手阳性有误导性](https://so.toutiao.com/search?keyword=外媒报多名中国游泳选手阳性有误导性)
+1. [兵哥哥一个动作圈粉在场大学生](https://so.toutiao.com/search?keyword=兵哥哥一个动作圈粉在场大学生)
+1. [西南医院一男子坠楼身亡？重庆辟谣](https://so.toutiao.com/search?keyword=西南医院一男子坠楼身亡？重庆辟谣)
+1. [B席绝杀 曼城1-0切尔西进决赛](https://so.toutiao.com/search?keyword=B席绝杀+曼城1-0切尔西进决赛)
 1. [女子100米栏吴艳妮创赛季最好成绩](https://so.toutiao.com/search?keyword=女子100米栏吴艳妮创赛季最好成绩)
 1. [马斯克确认推迟访问印度](https://so.toutiao.com/search?keyword=马斯克确认推迟访问印度)
 1. [摩根大通：黄金结构性牛市仍完好](https://so.toutiao.com/search?keyword=摩根大通：黄金结构性牛市仍完好)
-1. [准新娘自杀身亡 订婚彩礼仅返还18万](https://so.toutiao.com/search?keyword=准新娘自杀身亡+订婚彩礼仅返还18万)
 1. [百威回应麦道啤酒被检出呕吐毒素](https://so.toutiao.com/search?keyword=百威回应麦道啤酒被检出呕吐毒素)
 1. [美媒：伊朗袭击以暴露武器库实力](https://so.toutiao.com/search?keyword=美媒：伊朗袭击以暴露武器库实力)
-1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
-1. [张曼玉林丹搭档打羽毛球](https://so.toutiao.com/search?keyword=张曼玉林丹搭档打羽毛球)
-1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
 1. [林高远4-0横扫张本智和晋级决赛](https://so.toutiao.com/search?keyword=林高远4-0横扫张本智和晋级决赛)
-1. [兵哥哥一个动作圈粉在场大学生](https://so.toutiao.com/search?keyword=兵哥哥一个动作圈粉在场大学生)
-1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
 1. [父母离世后女子带着弟弟在婆家生活](https://so.toutiao.com/search?keyword=父母离世后女子带着弟弟在婆家生活)
-1. [周鸿祎：雷军说小米SU7不适合我](https://so.toutiao.com/search?keyword=周鸿祎：雷军说小米SU7不适合我)
 1. [美参议员桑德斯质疑军援以色列](https://so.toutiao.com/search?keyword=美参议员桑德斯质疑军援以色列)
 1. [爱德华兹33+9+6 森林狼轻取太阳](https://so.toutiao.com/search?keyword=爱德华兹33+9+6+森林狼轻取太阳)
-1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
 1. [重庆燃气集团新任一把手简历公布](https://so.toutiao.com/search?keyword=重庆燃气集团新任一把手简历公布)
 1. [66升油箱加出67升油 车主报警](https://so.toutiao.com/search?keyword=66升油箱加出67升油+车主报警)
 1. [男子去取钱未拆封的1万里少了300](https://so.toutiao.com/search?keyword=男子去取钱未拆封的1万里少了300)
 1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
 1. [中国互联网30年 哪些产品昙花一现](https://so.toutiao.com/search?keyword=中国互联网30年+哪些产品昙花一现)
 1. [英超：阿森纳2-0狼队先赛登上榜首](https://so.toutiao.com/search?keyword=英超：阿森纳2-0狼队先赛登上榜首)
-1. [日本海上自卫队两架直升机坠毁](https://so.toutiao.com/search?keyword=日本海上自卫队两架直升机坠毁)
 1. [沧州雄狮门将邵璞亮屡现低级失误](https://so.toutiao.com/search?keyword=沧州雄狮门将邵璞亮屡现低级失误)
 1. [以色列为何选择此时袭击伊朗](https://so.toutiao.com/search?keyword=以色列为何选择此时袭击伊朗)
 1. [9岁坠亡男孩与母亲最后对话曝光](https://so.toutiao.com/search?keyword=9岁坠亡男孩与母亲最后对话曝光)
@@ -62,7 +80,6 @@
 1. [美国为何阻碍巴勒斯坦“入联”](https://so.toutiao.com/search?keyword=美国为何阻碍巴勒斯坦“入联”)
 1. [俄外长：中国人伟大品质是“耐心”](https://so.toutiao.com/search?keyword=俄外长：中国人伟大品质是“耐心”)
 1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
-1. [广东韶关暴雨 墙被水流冲倒](https://so.toutiao.com/search?keyword=广东韶关暴雨+墙被水流冲倒)
 1. [价值12万的自行车上路被撞](https://so.toutiao.com/search?keyword=价值12万的自行车上路被撞)
 1. [专家称延迟退休致就业难逻辑不成立](https://so.toutiao.com/search?keyword=专家称延迟退休致就业难逻辑不成立)
 1. [广东清远寨岗镇突发洪水淹没街道](https://so.toutiao.com/search?keyword=广东清远寨岗镇突发洪水淹没街道)
