--- a/archives/toutiao-search/2024-04-21.md
+++ b/archives/toutiao-search/2024-04-21.md
@@ -1,64 +1,71 @@
 # 2024-04-21
 
-共 171 条
+共 178 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Apr 21 2024 13:00:35 GMT+0800 (China Standard Time) -->
-1. [约基奇32+12 掘金力克湖人](https://so.toutiao.com/search?keyword=约基奇32+12+掘金力克湖人)
+<!-- 最后更新时间 Sun Apr 21 2024 14:01:13 GMT+0800 (China Standard Time) -->
+1. [酒泉夜空现拖着长尾巴的不明发光物](https://so.toutiao.com/search?keyword=酒泉夜空现拖着长尾巴的不明发光物)
 1. [吴艳妮：化妆比赛是因尊重现场观众](https://so.toutiao.com/search?keyword=吴艳妮：化妆比赛是因尊重现场观众)
 1. [我国为月球绘制高清地质“写真集”](https://so.toutiao.com/search?keyword=我国为月球绘制高清地质“写真集”)
-1. [特斯拉中国全系降价14000元](https://so.toutiao.com/search?keyword=特斯拉中国全系降价14000元)
-1. [洪秀柱：两岸统一就没心病了](https://so.toutiao.com/search?keyword=洪秀柱：两岸统一就没心病了)
+1. [周杰伦演唱会VIP席大妈睡得真香](https://so.toutiao.com/search?keyword=周杰伦演唱会VIP席大妈睡得真香)
+1. [福州防空警报试鸣](https://so.toutiao.com/search?keyword=福州防空警报试鸣)
 1. [马丁回应拒绝跟黄子韬同台](https://so.toutiao.com/search?keyword=马丁回应拒绝跟黄子韬同台)
 1. [美众院批准向乌供超600亿美元援助](https://so.toutiao.com/search?keyword=美众院批准向乌供超600亿美元援助)
-1. [深圳暴雨](https://so.toutiao.com/search?keyword=深圳暴雨)
-1. [特斯拉与小米SU7价差缩小到1.6万](https://so.toutiao.com/search?keyword=特斯拉与小米SU7价差缩小到1.6万)
 1. [实拍广州塔夜晚6次接闪](https://so.toutiao.com/search?keyword=实拍广州塔夜晚6次接闪)
+1. [特斯拉中国全系降价14000元](https://so.toutiao.com/search?keyword=特斯拉中国全系降价14000元)
+1. [85后县长黄来兴被查](https://so.toutiao.com/search?keyword=85后县长黄来兴被查)
 1. [许美静南京演唱会全场喊退票](https://so.toutiao.com/search?keyword=许美静南京演唱会全场喊退票)
 1. [黄子韬就不当言论道歉](https://so.toutiao.com/search?keyword=黄子韬就不当言论道歉)
 1. [西安网友：我家燃气表比重庆还快](https://so.toutiao.com/search?keyword=西安网友：我家燃气表比重庆还快)
 1. [清远暴雨致高铁车厢进水？官方辟谣](https://so.toutiao.com/search?keyword=清远暴雨致高铁车厢进水？官方辟谣)
-1. [85后县长黄来兴被查](https://so.toutiao.com/search?keyword=85后县长黄来兴被查)
-1. [酒泉夜空现拖着长尾巴的不明发光物](https://so.toutiao.com/search?keyword=酒泉夜空现拖着长尾巴的不明发光物)
-1. [除了调休就别无他法吗](https://so.toutiao.com/search?keyword=除了调休就别无他法吗)
-1. [泽连斯基和内塔尼亚胡感谢美国援助](https://so.toutiao.com/search?keyword=泽连斯基和内塔尼亚胡感谢美国援助)
-1. [男子吐槽就餐遇海鲜刺客1只虾28元](https://so.toutiao.com/search?keyword=男子吐槽就餐遇海鲜刺客1只虾28元)
-1. [原北京军区副司令员马占民逝世](https://so.toutiao.com/search?keyword=原北京军区副司令员马占民逝世)
-1. [知情人称重庆寿宴离世演员有高血压](https://so.toutiao.com/search?keyword=知情人称重庆寿宴离世演员有高血压)
-1. [周杰伦演唱会VIP席大妈睡得真香](https://so.toutiao.com/search?keyword=周杰伦演唱会VIP席大妈睡得真香)
-1. [以将召见6个投票挺巴入联国家大使](https://so.toutiao.com/search?keyword=以将召见6个投票挺巴入联国家大使)
-1. [拜登特朗普双双落选《时代》人物榜](https://so.toutiao.com/search?keyword=拜登特朗普双双落选《时代》人物榜)
-1. [詹姆斯出战40分半钟16中10空砍27分](https://so.toutiao.com/search?keyword=詹姆斯出战40分半钟16中10空砍27分)
-1. [特斯拉全自动驾驶套餐大幅降价](https://so.toutiao.com/search?keyword=特斯拉全自动驾驶套餐大幅降价)
-1. [男子去银行销户因2分钱起争执](https://so.toutiao.com/search?keyword=男子去银行销户因2分钱起争执)
 1. [中国女游客在印尼火山坠亡](https://so.toutiao.com/search?keyword=中国女游客在印尼火山坠亡)
-1. [广东暴雨 轿车顶漏水变“水帘洞”](https://so.toutiao.com/search?keyword=广东暴雨+轿车顶漏水变“水帘洞”)
-1. [伊朗为何不打算“立即报复”以色列](https://so.toutiao.com/search?keyword=伊朗为何不打算“立即报复”以色列)
-1. [李昌平：警惕非常态的院士联名](https://so.toutiao.com/search?keyword=李昌平：警惕非常态的院士联名)
-1. [西安地铁10号线试车追尾致1死2伤](https://so.toutiao.com/search?keyword=西安地铁10号线试车追尾致1死2伤)
-1. [第一批火星移民者开始攒钱了](https://so.toutiao.com/search?keyword=第一批火星移民者开始攒钱了)
-1. [台湾发生5.0级地震 泉州福州有震感](https://so.toutiao.com/search?keyword=台湾发生5.0级地震+泉州福州有震感)
-1. [网友质疑济南燃气费高于北京上海](https://so.toutiao.com/search?keyword=网友质疑济南燃气费高于北京上海)
-1. [西湖大爷和周杰伦粉丝开演唱会](https://so.toutiao.com/search?keyword=西湖大爷和周杰伦粉丝开演唱会)
-1. [吴艳妮：期待奥运赛场上不同的自己](https://so.toutiao.com/search?keyword=吴艳妮：期待奥运赛场上不同的自己)
+1. [男子吐槽就餐遇海鲜刺客1只虾28元](https://so.toutiao.com/search?keyword=男子吐槽就餐遇海鲜刺客1只虾28元)
+1. [特斯拉与小米SU7价差缩小到1.6万](https://so.toutiao.com/search?keyword=特斯拉与小米SU7价差缩小到1.6万)
+1. [原北京军区副司令员马占民逝世](https://so.toutiao.com/search?keyword=原北京军区副司令员马占民逝世)
+1. [洪秀柱：两岸统一就没心病了](https://so.toutiao.com/search?keyword=洪秀柱：两岸统一就没心病了)
+1. [知情人称重庆寿宴离世演员有高血压](https://so.toutiao.com/search?keyword=知情人称重庆寿宴离世演员有高血压)
+1. [除了调休就别无他法吗](https://so.toutiao.com/search?keyword=除了调休就别无他法吗)
 1. [广东北江或现50年一遇洪水](https://so.toutiao.com/search?keyword=广东北江或现50年一遇洪水)
+1. [泽连斯基和内塔尼亚胡感谢美国援助](https://so.toutiao.com/search?keyword=泽连斯基和内塔尼亚胡感谢美国援助)
+1. [以将召见6个投票挺巴入联国家大使](https://so.toutiao.com/search?keyword=以将召见6个投票挺巴入联国家大使)
+1. [男子去银行销户因2分钱起争执](https://so.toutiao.com/search?keyword=男子去银行销户因2分钱起争执)
+1. [特斯拉全自动驾驶套餐大幅降价](https://so.toutiao.com/search?keyword=特斯拉全自动驾驶套餐大幅降价)
+1. [约基奇32+12 掘金力克湖人](https://so.toutiao.com/search?keyword=约基奇32+12+掘金力克湖人)
+1. [拜登特朗普双双落选《时代》人物榜](https://so.toutiao.com/search?keyword=拜登特朗普双双落选《时代》人物榜)
+1. [两女孩小区内玩耍遭陌生老太踢打](https://so.toutiao.com/search?keyword=两女孩小区内玩耍遭陌生老太踢打)
+1. [李昌平：警惕非常态的院士联名](https://so.toutiao.com/search?keyword=李昌平：警惕非常态的院士联名)
+1. [美67岁恋童癖约女孩开门发现是警察](https://so.toutiao.com/search?keyword=美67岁恋童癖约女孩开门发现是警察)
+1. [广东暴雨 轿车顶漏水变“水帘洞”](https://so.toutiao.com/search?keyword=广东暴雨+轿车顶漏水变“水帘洞”)
+1. [第一批火星移民者开始攒钱了](https://so.toutiao.com/search?keyword=第一批火星移民者开始攒钱了)
+1. [网友质疑济南燃气费高于北京上海](https://so.toutiao.com/search?keyword=网友质疑济南燃气费高于北京上海)
+1. [西安地铁10号线试车追尾致1死2伤](https://so.toutiao.com/search?keyword=西安地铁10号线试车追尾致1死2伤)
+1. [詹姆斯出战40分半钟16中10空砍27分](https://so.toutiao.com/search?keyword=詹姆斯出战40分半钟16中10空砍27分)
+1. [伊朗为何不打算“立即报复”以色列](https://so.toutiao.com/search?keyword=伊朗为何不打算“立即报复”以色列)
 1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
+1. [旅客坐20多个小时火车又回始发站](https://so.toutiao.com/search?keyword=旅客坐20多个小时火车又回始发站)
+1. [西湖大爷和周杰伦粉丝开演唱会](https://so.toutiao.com/search?keyword=西湖大爷和周杰伦粉丝开演唱会)
+1. [土耳其总统呼吁巴勒斯坦人团结起来](https://so.toutiao.com/search?keyword=土耳其总统呼吁巴勒斯坦人团结起来)
+1. [深圳暴雨](https://so.toutiao.com/search?keyword=深圳暴雨)
+1. [重庆男子驾车连撞多人监控曝光](https://so.toutiao.com/search?keyword=重庆男子驾车连撞多人监控曝光)
+1. [男子称看到不明物体坠落](https://so.toutiao.com/search?keyword=男子称看到不明物体坠落)
+1. [2024首场中国美人鱼公开赛开赛](https://so.toutiao.com/search?keyword=2024首场中国美人鱼公开赛开赛)
+1. [美大使向救援美籍人士单位赠锦旗](https://so.toutiao.com/search?keyword=美大使向救援美籍人士单位赠锦旗)
+1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
+1. [重庆一女歌手寿宴表演时摔倒去世](https://so.toutiao.com/search?keyword=重庆一女歌手寿宴表演时摔倒去世)
+1. [俄方回应美众院通过没收俄资产法案](https://so.toutiao.com/search?keyword=俄方回应美众院通过没收俄资产法案)
+1. [乌称空袭俄8个州的能源设施](https://so.toutiao.com/search?keyword=乌称空袭俄8个州的能源设施)
+1. [台湾发生5.0级地震 泉州福州有震感](https://so.toutiao.com/search?keyword=台湾发生5.0级地震+泉州福州有震感)
+1. [吴艳妮：期待奥运赛场上不同的自己](https://so.toutiao.com/search?keyword=吴艳妮：期待奥运赛场上不同的自己)
 1. [张曼玉林丹搭档打羽毛球](https://so.toutiao.com/search?keyword=张曼玉林丹搭档打羽毛球)
 1. [北约援乌加码 俄方如何应对](https://so.toutiao.com/search?keyword=北约援乌加码+俄方如何应对)
-1. [福州防空警报试鸣](https://so.toutiao.com/search?keyword=福州防空警报试鸣)
-1. [乌称空袭俄8个州的能源设施](https://so.toutiao.com/search?keyword=乌称空袭俄8个州的能源设施)
-1. [重庆男子驾车连撞多人监控曝光](https://so.toutiao.com/search?keyword=重庆男子驾车连撞多人监控曝光)
 1. [日本海上自卫队两架直升机坠毁](https://so.toutiao.com/search?keyword=日本海上自卫队两架直升机坠毁)
 1. [CBA季后赛辽宁本钢胜深圳马可波罗](https://so.toutiao.com/search?keyword=CBA季后赛辽宁本钢胜深圳马可波罗)
 1. [直击广东防汛抗洪一线实况](https://so.toutiao.com/search?keyword=直击广东防汛抗洪一线实况)
-1. [男子称看到不明物体坠落](https://so.toutiao.com/search?keyword=男子称看到不明物体坠落)
-1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
 1. [媒体：“四川德比”比想象中更精彩](https://so.toutiao.com/search?keyword=媒体：“四川德比”比想象中更精彩)
 1. [土耳其总统与哈马斯领导人举行会谈](https://so.toutiao.com/search?keyword=土耳其总统与哈马斯领导人举行会谈)
 1. [阿巴斯称将重新考虑与美国的关系](https://so.toutiao.com/search?keyword=阿巴斯称将重新考虑与美国的关系)
 1. [岸田文雄向靖国神社供奉祭品](https://so.toutiao.com/search?keyword=岸田文雄向靖国神社供奉祭品)
 1. [680余名涉赌诈嫌犯被押解回国](https://so.toutiao.com/search?keyword=680余名涉赌诈嫌犯被押解回国)
-1. [重庆一女歌手寿宴表演时摔倒去世](https://so.toutiao.com/search?keyword=重庆一女歌手寿宴表演时摔倒去世)
 1. [为什么有那么多人想看周杰伦演唱会](https://so.toutiao.com/search?keyword=为什么有那么多人想看周杰伦演唱会)
 1. [10秒延时视频记录佛山暴雨过程](https://so.toutiao.com/search?keyword=10秒延时视频记录佛山暴雨过程)
 1. [直击世界泳联跳水世界杯总决赛](https://so.toutiao.com/search?keyword=直击世界泳联跳水世界杯总决赛)
