--- a/archives/toutiao-search/2024-04-21.md
+++ b/archives/toutiao-search/2024-04-21.md
@@ -1,50 +1,65 @@
 # 2024-04-21
 
-共 199 条
+共 213 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Apr 21 2024 16:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Apr 21 2024 17:00:54 GMT+0800 (China Standard Time) -->
 1. [官方回应许美静演唱会全场喊退票](https://so.toutiao.com/search?keyword=官方回应许美静演唱会全场喊退票)
-1. [两女孩小区内玩耍遭陌生老太踢打](https://so.toutiao.com/search?keyword=两女孩小区内玩耍遭陌生老太踢打)
-1. [我国为月球绘制高清地质“写真集”](https://so.toutiao.com/search?keyword=我国为月球绘制高清地质“写真集”)
-1. [吴艳妮：化妆比赛是因尊重现场观众](https://so.toutiao.com/search?keyword=吴艳妮：化妆比赛是因尊重现场观众)
-1. [广东韶关一地因暴雨失联 伤亡不明](https://so.toutiao.com/search?keyword=广东韶关一地因暴雨失联+伤亡不明)
+1. [因洪涝失联的广东江湾镇恢复联系](https://so.toutiao.com/search?keyword=因洪涝失联的广东江湾镇恢复联系)
+1. [聆听长三角之“共享”圆舞曲](https://so.toutiao.com/search?keyword=聆听长三角之“共享”圆舞曲)
+1. [广东北江或现接近百年一遇洪水](https://so.toutiao.com/search?keyword=广东北江或现接近百年一遇洪水)
 1. [周杰伦演唱会VIP席大妈睡得真香](https://so.toutiao.com/search?keyword=周杰伦演唱会VIP席大妈睡得真香)
-1. [酒泉夜空现长尾巴不明发光物](https://so.toutiao.com/search?keyword=酒泉夜空现长尾巴不明发光物)
+1. [两女孩小区内玩耍遭陌生老太踢打](https://so.toutiao.com/search?keyword=两女孩小区内玩耍遭陌生老太踢打)
+1. [女子买内裤裆部有污渍 客服赔10元](https://so.toutiao.com/search?keyword=女子买内裤裆部有污渍+客服赔10元)
+1. [吴艳妮：化妆比赛是因尊重现场观众](https://so.toutiao.com/search?keyword=吴艳妮：化妆比赛是因尊重现场观众)
+1. [广东清远多村被水淹](https://so.toutiao.com/search?keyword=广东清远多村被水淹)
 1. [中国女游客在印尼火山坠亡](https://so.toutiao.com/search?keyword=中国女游客在印尼火山坠亡)
-1. [洪秀柱：一定要带台湾青年来广东](https://so.toutiao.com/search?keyword=洪秀柱：一定要带台湾青年来广东)
-1. [特斯拉与小米SU7价差缩小到1.6万](https://so.toutiao.com/search?keyword=特斯拉与小米SU7价差缩小到1.6万)
+1. [周海媚墓碑刻周芷若画像](https://so.toutiao.com/search?keyword=周海媚墓碑刻周芷若画像)
+1. [除了调休就别无他法吗](https://so.toutiao.com/search?keyword=除了调休就别无他法吗)
 1. [凤凰传奇演唱会逐渐伍佰化](https://so.toutiao.com/search?keyword=凤凰传奇演唱会逐渐伍佰化)
+1. [清远暴雨致高铁车厢进水？官方辟谣](https://so.toutiao.com/search?keyword=清远暴雨致高铁车厢进水？官方辟谣)
+1. [美众院批准向乌供超600亿美元援助](https://so.toutiao.com/search?keyword=美众院批准向乌供超600亿美元援助)
+1. [特斯拉与小米SU7价差缩小到1.6万](https://so.toutiao.com/search?keyword=特斯拉与小米SU7价差缩小到1.6万)
+1. [黄子韬就不当言论道歉](https://so.toutiao.com/search?keyword=黄子韬就不当言论道歉)
 1. [实拍广州塔夜晚6次接闪](https://so.toutiao.com/search?keyword=实拍广州塔夜晚6次接闪)
 1. [特斯拉中国全系降价14000元](https://so.toutiao.com/search?keyword=特斯拉中国全系降价14000元)
-1. [清远暴雨致高铁车厢进水？官方辟谣](https://so.toutiao.com/search?keyword=清远暴雨致高铁车厢进水？官方辟谣)
-1. [官方通报烧饼摊主被查后免费送饼](https://so.toutiao.com/search?keyword=官方通报烧饼摊主被查后免费送饼)
 1. [男子垂钓被“亿”点点观众围观](https://so.toutiao.com/search?keyword=男子垂钓被“亿”点点观众围观)
 1. [西安网友：我家燃气表比重庆还快](https://so.toutiao.com/search?keyword=西安网友：我家燃气表比重庆还快)
-1. [美众院批准向乌供超600亿美元援助](https://so.toutiao.com/search?keyword=美众院批准向乌供超600亿美元援助)
-1. [黄子韬就不当言论道歉](https://so.toutiao.com/search?keyword=黄子韬就不当言论道歉)
-1. [福州防空警报试鸣](https://so.toutiao.com/search?keyword=福州防空警报试鸣)
-1. [外卖小哥大雨中带幼儿送餐](https://so.toutiao.com/search?keyword=外卖小哥大雨中带幼儿送餐)
-1. [除了调休就别无他法吗](https://so.toutiao.com/search?keyword=除了调休就别无他法吗)
-1. [4月汽车行业价格战再升级](https://so.toutiao.com/search?keyword=4月汽车行业价格战再升级)
-1. [广东北江或现50年一遇洪水](https://so.toutiao.com/search?keyword=广东北江或现50年一遇洪水)
-1. [女子买内裤裆部有污渍 客服赔10元](https://so.toutiao.com/search?keyword=女子买内裤裆部有污渍+客服赔10元)
+1. [桌上腾起火苗 小伙空手端“火锅”](https://so.toutiao.com/search?keyword=桌上腾起火苗+小伙空手端“火锅”)
+1. [哈姆：之后防约基奇还会有调整](https://so.toutiao.com/search?keyword=哈姆：之后防约基奇还会有调整)
+1. [酒泉夜空现长尾巴不明发光物](https://so.toutiao.com/search?keyword=酒泉夜空现长尾巴不明发光物)
+1. [官方通报烧饼摊主被查后免费送饼](https://so.toutiao.com/search?keyword=官方通报烧饼摊主被查后免费送饼)
 1. [特斯拉全自动驾驶套餐大幅降价](https://so.toutiao.com/search?keyword=特斯拉全自动驾驶套餐大幅降价)
-1. [广东清远多村被水淹](https://so.toutiao.com/search?keyword=广东清远多村被水淹)
-1. [85后县长黄来兴被查](https://so.toutiao.com/search?keyword=85后县长黄来兴被查)
-1. [马丁回应拒绝跟黄子韬同台](https://so.toutiao.com/search?keyword=马丁回应拒绝跟黄子韬同台)
-1. [广东飞来峡水利枢纽溢流坝正在泄洪](https://so.toutiao.com/search?keyword=广东飞来峡水利枢纽溢流坝正在泄洪)
-1. [李昌平：警惕非常态的院士联名](https://so.toutiao.com/search?keyword=李昌平：警惕非常态的院士联名)
-1. [西安地铁10号线试车追尾致1死2伤](https://so.toutiao.com/search?keyword=西安地铁10号线试车追尾致1死2伤)
-1. [男子吐槽就餐遇海鲜刺客1只虾28元](https://so.toutiao.com/search?keyword=男子吐槽就餐遇海鲜刺客1只虾28元)
-1. [男子去银行销户因2分钱起争执](https://so.toutiao.com/search?keyword=男子去银行销户因2分钱起争执)
+1. [美67岁恋童癖约女孩开门发现是警察](https://so.toutiao.com/search?keyword=美67岁恋童癖约女孩开门发现是警察)
+1. [俄方回应美众院通过没收俄资产法案](https://so.toutiao.com/search?keyword=俄方回应美众院通过没收俄资产法案)
+1. [4月汽车行业价格战再升级](https://so.toutiao.com/search?keyword=4月汽车行业价格战再升级)
 1. [知情人称重庆寿宴离世演员有高血压](https://so.toutiao.com/search?keyword=知情人称重庆寿宴离世演员有高血压)
 1. [网友质疑济南燃气费高于北京上海](https://so.toutiao.com/search?keyword=网友质疑济南燃气费高于北京上海)
+1. [85后县长黄来兴被查](https://so.toutiao.com/search?keyword=85后县长黄来兴被查)
+1. [西安地铁10号线试车追尾致1死2伤](https://so.toutiao.com/search?keyword=西安地铁10号线试车追尾致1死2伤)
+1. [王健林退出中国儒意控股有限公司](https://so.toutiao.com/search?keyword=王健林退出中国儒意控股有限公司)
 1. [周杰伦太阳之子称号杭州演唱会破功](https://so.toutiao.com/search?keyword=周杰伦太阳之子称号杭州演唱会破功)
-1. [俄方回应美众院通过没收俄资产法案](https://so.toutiao.com/search?keyword=俄方回应美众院通过没收俄资产法案)
-1. [美67岁恋童癖约女孩开门发现是警察](https://so.toutiao.com/search?keyword=美67岁恋童癖约女孩开门发现是警察)
-1. [《哈尔滨一九四四》今日开播](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》今日开播)
+1. [李昌平：警惕非常态的院士联名](https://so.toutiao.com/search?keyword=李昌平：警惕非常态的院士联名)
+1. [广东飞来峡水利枢纽溢流坝正在泄洪](https://so.toutiao.com/search?keyword=广东飞来峡水利枢纽溢流坝正在泄洪)
+1. [男子去银行销户因2分钱起争执](https://so.toutiao.com/search?keyword=男子去银行销户因2分钱起争执)
+1. [佘诗曼：非常期待出演新闻女王2](https://so.toutiao.com/search?keyword=佘诗曼：非常期待出演新闻女王2)
+1. [广东阳山现洪涝灾害已转移1.4万人](https://so.toutiao.com/search?keyword=广东阳山现洪涝灾害已转移1.4万人)
 1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
+1. [以军称连夜打击多个真主党目标](https://so.toutiao.com/search?keyword=以军称连夜打击多个真主党目标)
+1. [周杰伦问粉丝自己来还是跟朋友来的](https://so.toutiao.com/search?keyword=周杰伦问粉丝自己来还是跟朋友来的)
+1. [马丁回应拒绝跟黄子韬同台](https://so.toutiao.com/search?keyword=马丁回应拒绝跟黄子韬同台)
+1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
+1. [男子吐槽就餐遇海鲜刺客1只虾28元](https://so.toutiao.com/search?keyword=男子吐槽就餐遇海鲜刺客1只虾28元)
+1. [广西网友实拍房顶遭雷击炸出坑](https://so.toutiao.com/search?keyword=广西网友实拍房顶遭雷击炸出坑)
+1. [洪秀柱：一定要带台湾青年来广东](https://so.toutiao.com/search?keyword=洪秀柱：一定要带台湾青年来广东)
+1. [男子遇大面积虫子吐丝如入盘丝洞](https://so.toutiao.com/search?keyword=男子遇大面积虫子吐丝如入盘丝洞)
+1. [南京现男童尸体 网传其父现场指认](https://so.toutiao.com/search?keyword=南京现男童尸体+网传其父现场指认)
+1. [我国为月球绘制高清地质“写真集”](https://so.toutiao.com/search?keyword=我国为月球绘制高清地质“写真集”)
+1. [广东韶关一地因暴雨失联 伤亡不明](https://so.toutiao.com/search?keyword=广东韶关一地因暴雨失联+伤亡不明)
+1. [福州防空警报试鸣](https://so.toutiao.com/search?keyword=福州防空警报试鸣)
+1. [外卖小哥大雨中带幼儿送餐](https://so.toutiao.com/search?keyword=外卖小哥大雨中带幼儿送餐)
+1. [广东北江或现50年一遇洪水](https://so.toutiao.com/search?keyword=广东北江或现50年一遇洪水)
+1. [《哈尔滨一九四四》今日开播](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》今日开播)
 1. [2024青马女子全马冠亚季军诞生](https://so.toutiao.com/search?keyword=2024青马女子全马冠亚季军诞生)
 1. [深圳暴雨](https://so.toutiao.com/search?keyword=深圳暴雨)
 1. [岸田文雄向靖国神社供奉祭品](https://so.toutiao.com/search?keyword=岸田文雄向靖国神社供奉祭品)
@@ -52,7 +67,6 @@
 1. [广东暴雨 轿车顶漏水变“水帘洞”](https://so.toutiao.com/search?keyword=广东暴雨+轿车顶漏水变“水帘洞”)
 1. [伊朗为何不打算“立即报复”以色列](https://so.toutiao.com/search?keyword=伊朗为何不打算“立即报复”以色列)
 1. [专科女生逆袭考上上海交大研究生](https://so.toutiao.com/search?keyword=专科女生逆袭考上上海交大研究生)
-1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
 1. [伊拉克武装称袭击戈兰高地以目标](https://so.toutiao.com/search?keyword=伊拉克武装称袭击戈兰高地以目标)
 1. [洪秀柱：两岸统一就没心病了](https://so.toutiao.com/search?keyword=洪秀柱：两岸统一就没心病了)
 1. [南京燃气计费有问题？公司回应](https://so.toutiao.com/search?keyword=南京燃气计费有问题？公司回应)
